# salotto

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md  🛠-task---improvement.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml
backend/migrations/: 0002_files_and_search.sql  001_initial_schema.down.sql  001_initial_schema.up.sql  002_chat_features.down.sql  002_chat_features.up.sql  003_custom_profiles.down.sql  003_custom_profiles.up.sql  004_workspace_invites.up.sql
backend/src/: config.rs  error.rs  main.rs  routes.rs  state.rs
backend/src/auth/: jwt.rs  middleware.rs  password.rs
backend/src/handlers/: auth.rs  calls.rs  channels.rs  dms.rs  files.rs  messages.rs  mod.rs  reactions.rs  search.rs  users.rs  workspaces.rs
backend/src/models/: channel.rs  message.rs  mod.rs  user.rs  workspace.rs
backend/src/ws/: handler.rs  mod.rs  pubsub.rs
desktop/: package-lock.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CallRoom.tsx  TitleBar.tsx
frontend/src/components/chat/: MessageInput.tsx  MessageItem.tsx  MessageList.tsx  ThreadView.tsx
frontend/src/components/modals/: UserSettingsModal.tsx  (+1 more)
frontend/src/pages/: AuthPage.tsx  MainPage.tsx
frontend/src/store/: authStore.ts  chatStore.ts
(+2 files in other folders)
