[package]
name = "salotto-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Salotto — Secure, self-hosted team communication platform"
license = "MIT"

[dependencies]
# ── Web framework & async runtime ──
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
futures-util = "0.3"
livekit-api = "0.5.6"

# ── Database ──
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate",
    "uuid",
    "chrono",
    "json",
] }

# ── Redis ──
redis = { version = "0.27", features = ["aio", "tokio-comp"] }

# ── S3 / MinIO ──
aws-sdk-s3 = { version = "1", default-features = false, features = ["rt-tokio", "default-https-client"] }

# ── Authentication ──
argon2 = "0.5"
jsonwebtoken = "10"
sha2 = "0.10"
hex = "0.4"

# ── Serialization ──
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Validation ──
validator = { version = "0.19", features = ["derive"] }

# ── Error handling ──
thiserror = "2"
anyhow = "1"

# ── Logging / Tracing ──
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ── Utilities ──
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
